--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -20,5 +20,4 @@ formats: all
 python:
   version: 3.7
   install:
-    - requirements: docs/requirements.txt
-  setup_py_install: true
+    - requirements: requirements.txt
