--- a/docs/Makefile
+++ b/docs/Makefile
@@ -19,3 +19,5 @@ help:
 %: Makefile
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
+apidocs:
+     sphinx-apidoc -o source/ ../melampus
