--- a/docs/Makefile
+++ b/docs/Makefile
@@ -19,5 +19,4 @@ help:
 %: Makefile
 	@$(SPHINXBUILD) -M $@ "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
 
-apidocs:
-     sphinx-apidoc -o source/ ../melampus
+apidocs: sphinx-apidoc -o source/ ../melampus
